# NoPHP

./: .gitignore  LICENSE  README.md  build.sh  example.php  index.php  out.html  parser.out  pyproject.toml  spindle.py  splitter.py  test.php  tree  weaver.py  wool.yaml
example/: parser.out
example/config/: styles.php  wool.yaml
example/db/: store.php
example/pages/: index.php  store.php
lang/: compiler.py  exceptions.py  lexer.py  module.py  modules.py  pparser.py  types.py
lang/std/: db.py  echo.py  htmlspecialchars.py  primitives.py  rand.py  redirect.py  session.py  string.py
nophp/: __main__.py  conv.py  spindle.py  weaver.py
nophp/lang/: compiler.py  exceptions.py  lexer.py  module.py  modules.py  pparser.py  types.py
nophp/lang/std/: bcrypt.py  db.py  echo.py  htmlspecialchars.py  internal.py  json.py  memory.py  primitives.py  rand.py  redirect.py  session.py  string.py  stripe.py
nophp_rust/: Cargo.toml  parser.out  test.php
nophp_rust/py/: doodle.py
nophp_rust/src/: main.rs
v/: main.v  v.mod
